# rust_pdf_signing

./: .gitignore  Cargo.toml  DEVELOPMENT_JOURNEY.md  DSS_PKI_Factory.md  PKCS7_LTV_JOURNEY.md  README.md
examples/: .gitignore  sign_doc.rs  verify_pdf.rs
examples/assets/: crl-ocsp-chain.pem  crl-ocsp-key.pem  generate_tag_pdf.py  good-user-crl-ocsp.p12
src/: digitally_sign.rs  error.rs  image_insert.rs  image_insert_to_page.rs  image_xobject.rs  lib.rs  lopdf_utils.rs  ltv.rs  rectangle.rs  signature_anchor.rs  signature_image.rs  signature_info.rs  signature_options.rs  signature_placeholder.rs  signature_validator.rs
