[package]
name = "pdf_signing"
description = "Crate for adding signatures and digitaly sign pdf documents."
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pdf", "signing"]
categories = ["encoding", "graphics"]
repository = "https://github.com/ralpha/pdf_signing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
lopdf = { version = "0.33.0", features = [
    "chrono_time",
    "nom_parser",
], default-features = false}
png = "0.17.13"
rand = "0.8.3"
sha2 = "0.10.8"
sha1 = "0.10.6"
base64 = "0.21.7"
chrono = "0.4.38"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120", features = ["preserve_order"] }
cryptographic-message-syntax = "0.26.0"
x509-certificate = "0.23.1"
bcder = "0.7.4"
reqwest = "0.11.27"
x509-parser = "0.16.0"
rasn-ocsp = "0.16.0"
rasn-pkix = "0.16.0"
rasn = "0.16.0"

[features]
default = []

debug = []
