[package]
name = "pdf_signing"
description = "Crate for adding signatures and digitaly sign pdf documents."
version = "0.1.0"
authors = ["Ralph Bisschops <ralph.bisschops.dev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["pdf", "signing"]
categories = ["encoding", "graphics"]
repository = "https://github.com/ralpha/pdf_signing"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.29"
lopdf = { version = "0.39.0", features = [
    "chrono",
], default-features = false}
png = "0.18.1"
rand = "0.9.1"
sha2 = "0.10.8"
sha1 = "0.10.6"
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
cryptographic-message-syntax = "0.28.0"
x509-certificate = "0.25.0"
bcder = "0.7.6"
reqwest = { version = "0.12.15", features = ["blocking"] }
x509-parser = "0.18.1"
rasn-ocsp = "0.28.8"
rasn-pkix = "0.28.8"
rasn = "0.28.8"

[features]
default = []

debug = []
